--- a/operators/storageclass-operator/Dockerfile
+++ b/operators/storageclass-operator/Dockerfile
@@ -1,17 +1,11 @@
-# Build the manager binary
-FROM golang:1.10.3 as builder
-
-# Copy in the go src
-WORKDIR /go/src/sigs.k8s.io/cluster-api-provider-gcp/operators/storageclass-operator
-COPY pkg/    pkg/
-COPY cmd/    cmd/
-COPY vendor/ vendor/
-
-# Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager sigs.k8s.io/cluster-api-provider-gcp/operators/storageclass-operator/cmd/manager
-
-# Copy the controller-manager into a thin image
 FROM ubuntu:latest
 WORKDIR /root/
-COPY --from=builder /go/src/sigs.k8s.io/cluster-api-provider-gcp/operators/storageclass-operator/manager .
+COPY manager manager
+COPY channels/ channels/
+
+ARG K8S_VER=v1.12.0
+RUN apt update && apt -y install curl 
+RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$K8S_VER/bin/linux/amd64/kubectl && \
+    chmod a+x kubectl && mv kubectl /usr/local/bin
+
 ENTRYPOINT ["./manager"]
