--- a/operators/knative-operator/config/samples/addons_v1alpha1_knative.yaml
+++ b/operators/knative-operator/config/samples/addons_v1alpha1_knative.yaml
@@ -1,9 +1,7 @@
 apiVersion: addons.sigs.k8s.io/v1alpha1
 kind: Knative
 metadata:
-  labels:
-    controller-tools.k8s.io: "1.0"
-  name: knative-sample
+  name: default
+  namespace: kube-system
 spec:
-  # Add fields here
-  foo: bar
+  channel: stable
